# android-tv-remote

./: .gitignore  README.md  adb_controller.py  android-tv-remote.desktop  android_tv_controller.py  cert_test.pem  config.py  device_discovery.py  install.sh  key_test.pem  pyproject.toml  requirements.txt  scrcpy_manager.py  test_cli.py  test_suite.py  touchpad_widget.py  tv_remote_app.py
